# cybernetics

./: .env_default  Cargo.toml  README.md
doc/: curl_examples.md  notes.md  teoria.md
migrations/2018-10-27-150548_create_objects/: down.sql  up.sql
migrations/2019-08-22-193154_create_objects/: up.sql
migrations/2019-11-03-140201_create_relations/: up.sql
migrations/2019-12-02-211526_object_hash/: up.sql
migrations/2019-12-18-221644_create_relations/: up.sql
migrations/src/: schema.rs
script/: test.sh
src/: accounts_storage.rs  crypto.rs  error.rs  key_pair.rs  lib.rs  main.rs  msg_block.rs  person.rs  utils.rs  ws_web_server.rs
src/crypto/: hash.rs  mod.rs  msg_block.rs  person.rs  personal_keys.rs  string.rs
src/database/: connection_pool.rs  mod.rs  object.rs  object_queries.rs  relation.rs  relation_queries.rs  schema.rs
src/primitives/: header.rs  mod.rs  object.rs  relation.rs
src/server/: handle_objects.rs  handle_relations.rs  handler.rs  mod.rs  router.rs
tests/: crypto.rs  object_api.rs  objects_api.rs  relation_directed.rs  relations_api.rs
tests/common/: mod.rs  object_helpers.rs  relation_helpers.rs  rocket_helpers.rs
