[package]
name = "cybernetics"
version = "0.1.1"
authors = ["hbdgr <hbdgr@protonmail.com>"]

[dependencies]
sodiumoxide = "0.0.16"

ws = "0.7.6"
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_cors = "0.3.0"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.2"


serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

bincode = "1.0.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
